[gd_scene load_steps=10 format=2]

[ext_resource path="res://Block.gd" type="Script" id=1]

[sub_resource type="CubeMesh" id=1]
size = Vector3( 16, 1, 256 )

[sub_resource type="ShaderMaterial" id=2]

[sub_resource type="BoxShape" id=3]
extents = Vector3( 8, 1, 128 )

[sub_resource type="CubeMesh" id=4]
size = Vector3( 32, 1, 256 )

[sub_resource type="SpatialMaterial" id=5]

[sub_resource type="BoxShape" id=6]
extents = Vector3( 16, 1, 128 )

[sub_resource type="BoxShape" id=7]
extents = Vector3( 15.3627, 15.833, 45.6584 )

[sub_resource type="BoxShape" id=8]
extents = Vector3( 21.4711, 38.1043, 1 )

[node name="Block" type="StaticBody"]
script = ExtResource( 1 )

[node name="CSGMesh" type="CSGMesh" parent="."]
mesh = SubResource( 1 )
material = SubResource( 2 )

[node name="CollisionShape" type="CollisionShape" parent="."]
shape = SubResource( 3 )

[node name="CSGMesh2" type="CSGMesh" parent="."]
mesh = SubResource( 4 )
material = SubResource( 5 )

[node name="CollisionShape2" type="CollisionShape" parent="."]
shape = SubResource( 6 )

[node name="off2" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 4.41542, 91.2235 )

[node name="CollisionShape" type="CollisionShape" parent="off2"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 10.4644, -37.4405 )
shape = SubResource( 7 )

[node name="off" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 4.81715, -7.52181 )

[node name="CollisionShape" type="CollisionShape" parent="off"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 10.4644, -37.4405 )
shape = SubResource( 7 )

[node name="CollisionShape3" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 32.955, 129.31 )
shape = SubResource( 8 )

[node name="CollisionShape4" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 32.955, -126.409 )
shape = SubResource( 8 )

[node name="off3" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 4.41542, 82.5973 )
collision_layer = 2

[node name="CollisionShape" type="CollisionShape" parent="off3"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 10.4644, -37.4405 )
shape = SubResource( 7 )

[node name="off4" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 4.81715, -16.148 )
collision_layer = 2

[node name="CollisionShape" type="CollisionShape" parent="off4"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 10.4644, -37.4405 )
shape = SubResource( 7 )

[node name="CarSpawn" type="Position3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3.85015, -3.9052 )

[node name="CarSpawn2" type="Position3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3.85015, 5.29601 )

[node name="VisibilityNotifier" type="VisibilityNotifier" parent="."]

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0

[connection signal="screen_entered" from="VisibilityNotifier" to="." method="_on_VisibilityNotifier_screen_entered"]
[connection signal="screen_exited" from="VisibilityNotifier" to="." method="_on_VisibilityNotifier_screen_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
